# auto-saver

./: CMakeLists.txt  README.md  applybutton.cpp  applybutton.h  dev.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  savefile.cpp  savefile.h
mainwindow.h - backup/: 2022-03-24 11-39-28..mainwindow.h  2022-03-24 11-39-33..mainwindow.h
